# SessionSmith

./: .gitignore  CHANGELOG.md  LICENSE  Pipfile  STATUS.md  SessionSmith.py  pyproject.toml  readme.md  setup.py  tutorial.ipynb
.github/workflows/: README.md  extension-release.yml  release.yml  test.yml  update-formula.yml
Formula/: README.md  sessionsmith.rb
SessionSmith/: __init__.py  cli.py  compare.py  core.py  crypto.py  error_handling.py  exceptions.py  formats.py  i18n.py  info.py  jupyter_utils.py  logging_config.py  manager.py  remote_backends.py  resource_manager.py  serializers.py  ssm.py  tracer.py  utils.py  version_control.py  visualizer.py  visualizer_arrays.py  visualizer_generic.py
SessionSmith.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: README.md  algorithm-tracer.md  api-reference.md  checkpoint-guide.md  cli-reference.md  getting-started.md  i18n-guide.md  ssm-guide.md  version-control.md
extension/: .gitignore  .vscodeignore  README.md  package-lock.json  package.json
extension/media/: graph.css  graph.js
extension/src/: extension.ts  graphPanel.ts  runner.ts  ssmReader.ts  treeView.ts
tests/: __init__.py  test_cli.py  test_core.py  test_crypto.py  test_logging_config.py  test_remote_backends.py  test_ssm.py  test_verify.py
