[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SessionSmith"
dynamic = ["version"]
description = "Git-style session management for Python. Save, restore, and track your variables with ease."
readme = "readme.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "YutoTAKAGI", email = "yutotkg.1040@gmail.com"}
]
keywords = [
    "jupyter",
    "notebook",
    "session",
    "save",
    "load",
    "pickle",
    "serialization",
    "algorithm",
    "tracer",
    "visualization",
    "cli",
    "git",
    "version-control",
    "checkpoint",
    "machine-learning",
    "long-running",
    "recovery",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Version Control",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
visualization = ["matplotlib>=3.5.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
all = [
    "matplotlib>=3.5.0",
]

[project.scripts]
ssm = "SessionSmith.cli:main"

[project.urls]
Homepage = "https://github.com/yut0takagi/SessionSmith"
Documentation = "https://github.com/yut0takagi/SessionSmith/tree/main/docs"
Repository = "https://github.com/yut0takagi/SessionSmith.git"
Issues = "https://github.com/yut0takagi/SessionSmith/issues"
Changelog = "https://github.com/yut0takagi/SessionSmith/blob/main/CHANGELOG.md"

[tool.setuptools.dynamic]
version = {attr = "SessionSmith.__version__"}

[tool.setuptools.packages.find]
include = ["SessionSmith*"]

[tool.setuptools.package-data]
SessionSmith = ["py.typed"]

# ===== Development Tools =====

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.venv
    | build
    | dist
    | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["SessionSmith"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "E402",  # module level import not at top of file (Jupyter notebooks allow this)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise from err (意図的に使用)
    "F401",  # 未使用インポート（オプショナル依存のため）
    "F821",  # 未定義名（IPython環境でのみ利用可能な関数のため）
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
timeout = 30

[tool.coverage.run]
source = ["SessionSmith"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

